<resources>
    <string name="app_name">lesson5.4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_message">Произошла ошибка при загрузке данных</string>
    <string name="search">Поиск</string>
    <string name="enter_desc">Введите описание</string>
    <string name="enter_title">Введите титул</string>
    <string name="create_post">Создать пост</string>
    <string name="upd_post">Обновить пост</string>
    <string name="edit_post">Изменить пост</string>
    <string name="id">Введите ID пользователя</string>
    <string name="enter_id_post">Введите ID поста</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="enter_post_id">Введите айди поста, который нужно удалить</string>
    <string name="go_to_second_fragment"><![CDATA[->]]></string>
</resources>