<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".ui.fragment.MainFragment">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title" />

    <EditText
        android:id="@+id/et_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_post" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/upd_post" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_post" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/id" />

    <EditText
        android:id="@+id/et_id_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_id_post" />
    <Button
        android:id="@+id/btn_sec_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_second_fragment"/>

</LinearLayout>